Fix grid on small screens

--- a/css/base.css
+++ b/css/base.css
@@ -33,41 +33,51 @@ time, mark, audio, video {
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-  display: block; }
+  display: block;
+}
 
 body {
-  line-height: 1; }
+  line-height: 1;
+}
 
 ol, ul {
-  list-style: none; }
+  list-style: none;
+}
 
 blockquote, q {
-  quotes: none; }
+  quotes: none;
+}
 
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
-  content: none; }
+  content: none;
+}
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 section, header, footer, nav, article, aside, figure {
   display: block;
-  width: 100%; }
+  width: 100%;
+}
 
 mark, time, meter, progress {
-  display: inline; }
+  display: inline;
+}
 
 /* ---- Base ---- */
 
 html {
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+}
 
 body {
   background: var(--background-color);
@@ -174,9 +184,8 @@ ul.apps {
 
 @media all and (max-width: 660px) {
   ul.apps {
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
     grid-column-gap: auto;
-    grid-row-gap: 0.5rem;
     width: 288px;
     margin-left: auto;
     margin-right: auto;
